Fix margin on listing notes, add extra spacing between bulletpoints on listing detail page

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -39,6 +39,10 @@
     @apply text-xl md:text-2xl font-semibold;
   }
 
+  .detail-page ul {
+    @apply space-y-2.5;
+  }
+
   .centered-container {
     @apply max-w-5xl w-full mx-auto;
   }
